# kdev-sql

./: .gitignore  CMakeLists.txt  kdevsqlsupport.categories  kdevsqlui.qrc  kdevsqlui.rc  queryworker.cpp  queryworker.h  resulttablewidget.cpp  sqllanguagesupport.cpp  sqllanguagesupport.h  sqllanguagesupport.json  sqllanguagesupport.rc  sqltoolviewbase.cpp  sqltoolviewbase.h
connections/: CMakeLists.txt  connections.cpp  connections.h  connections.ui  connectionsallprojectsmodel.cpp  connectionsallprojectsmodel.h  connectionsmodel.cpp  connectionsmodel.h
dbinfo/: dbinfobase.cpp  dbinfobase.h  dbinfopostgres.cpp  dbinfopostgres.h  dbinfosqlite.cpp  dbinfosqlite.h
results/: queryworker.cpp  queryworker.h  results.ui  resulttablewidget.cpp  resulttablewidget.h
schema/: dbschemacolumn.cpp  dbschemacolumn.h  dbschemafolder.cpp  dbschemafolder.h  dbschemaindex.cpp  dbschemaindex.h  dbschemaitem.cpp  dbschemaitem.h  dbschemamodel.cpp  dbschemamodel.h  dbschematable.cpp  dbschematable.h  schemabrowser.ui  schemabrowserwidget.cpp  schemabrowserwidget.h
